added TS support, finished values

--- a/components/Globals/Nav.module.scss
+++ b/components/Globals/Nav.module.scss
@@ -29,7 +29,8 @@
     text-decoration: none;
     
     &.selected {
-      border-bottom: 3px solid black;
+      padding-bottom: 10px;
+      border-bottom: 3px solid #BAC2E8;
     }
   }
 }
