--- a/components/Globals/Notification.module.scss
+++ b/components/Globals/Notification.module.scss
@@ -1,11 +1,17 @@
 #container {
+  display: flex;
+  align-items: center;
   background-color: #8261A9;
-  padding: 10px 18px;
-
+  padding: 6px 18px 5px;
+  
   > h2 {
+    display: inline-block;
+    position: relative;
+    bottom: 2px;
     font-family: "Work Sans";
     font-size: 16px;
     font-weight: 400;
     color: white;
+    margin-right: 8px;
   }
 }
