--- a/components/Globals/Nav.module.scss
+++ b/components/Globals/Nav.module.scss
@@ -12,7 +12,7 @@
       font-size: 40px;
       font-weight: 700;
       line-height: 53px;
-      color: black;
+      color: #242A44;
     }
   }
 }
@@ -25,7 +25,7 @@
     line-height: 24px;
     letter-spacing: 0.03rem;
     margin-left: 35px;
-    color: black;
+    color: #242A44;
     text-decoration: none;
     
     &.selected {
