added navigation responsiveness to footer

--- a/components/Globals/Footer.module.scss
+++ b/components/Globals/Footer.module.scss
@@ -71,6 +71,10 @@
       letter-spacing: 0.03em;
       color: #ffffff;
       margin-top: 8px;
+
+      &.selected {
+        font-weight: 600;
+      }
     }
   }
 }
